# adventofcode2021

./: Cargo.toml  LICENSE  README.md
src/: alu.rs  amphipod.rs  beacon_scanner.rs  binary_diagnostic.rs  chiton.rs  dirac_dice.rs  dive.rs  dumbo_octopus.rs  extended_polymerization.rs  giant_squid.rs  hydrothermal_venture.rs  lanternfish.rs  lib.rs  main.rs  packet_decoder.rs  passage_pathing.rs  reactor_reboot.rs  sea_cucumber.rs  seven_segment.rs  smoke_basin.rs  snailfish.rs  sonar_sweep.rs  syntax_scoring.rs  transparent_origami.rs  trench_map.rs  trick_shot.rs  whale_treachery.rs
