[package]
name = "adventofcode2021"
version = "0.13.0"
authors = ["Kevin Simpson <ktsimpso@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.34.0"
anyhow = "1.0.51"
simple-error = "0.2.3"
strum = "0.23"
strum_macros = "0.23"
nom = "7.1.0"
lazy_static = "1.4.0"
